# zkira-pay

./: .gitignore  Anchor.toml  CASHOUT-SOP.md  Cargo.toml  PITCH_DECK_CONTENT.md  README.md  ZKIRA-PAY-SALES.md  ZKIRA_PAY_SALES_BRIEF.md  ecosystem.config.example.js  ecosystem.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  zkira_snapshot.md
apps/api/: drizzle.config.ts  package.json
apps/api/drizzle/: 0000_misty_gabe_jones.sql  0001_serious_plazm.sql  0002_distributor_hierarchy.sql  0002_even_odin.sql  0003_security_columns.sql  0004_distributor_tracking_code.sql
apps/api/scripts/: seed-content.ts
apps/api/src/: config.ts  index.ts
apps/bot/: package.json
apps/bot/src/: callbacks.ts  config.ts  guide.ts  index.ts  keyboards.ts  utils.ts
apps/pay/: next.config.ts  package.json
apps/pay/messages/: ar.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pt.json  ru.json  zh.json
apps/pay/public/: Canton_Dashboard_SOW_Dark.docx  Flowryd_M3_SOW (1).docx  Flowryd_M3_SOW.docx  Le_Rondini_Proposal.docx  Legendary_Car_Rental_SEO_Proposal.docx  bg-video.webm  huly_laser_remix.webm  legendarycarrental.ae_issues_20260228.xlsx
apps/swap/: .env.local.example  next.config.ts  package.json  tsconfig.json
apps/swap-api/: .env.example  package.json
apps/swap-api/src/: app.ts  config.ts  index.ts
apps/swap/public/: ascii_remix.webm
circuits/: .gitignore  merkle-tree.circom  package.json  pnpm-lock.yaml  withdraw.circom
circuits/scripts/: compile.sh  copy-to-public.sh  extract-vk-rust.ts  trusted-setup.sh
circuits/test/: withdraw.test.ts
contracts/arbitrum/: .gitignore  ComplianceTornado.sol  ERC20Pool-bytecode.json  HasherFactory.sol  deployment-421614.json  hardhat.config.ts  package.json  test-deployment-421614.json  tsconfig.json
contracts/arbitrum/interfaces/: IERC20.sol  IHasher.sol
contracts/arbitrum/scripts/: deploy-test-tokens.ts  deploy.ts  redeploy-pools.ts
contracts/tron/: ComplianceTornado.sol  DEPLOYMENT_NOTES.md  HasherFactory.sol  README.md  SanctionsOracle.sol  USDTPool.sol  deploy-nile.js  deploy-pools-nile.js  deploy-shasta.js  deployment-nile.json  deployment-shasta.json  package.json  tronbox-config.js  update-registry.js
deploy/nginx/: omnipay.club.conf
programs/conditional-escrow/: Cargo.toml
programs/conditional-escrow/src/: lib.rs
programs/ghost-registry/: Cargo.toml
programs/ghost-registry/src/: lib.rs
programs/multisig-escrow/: Cargo.toml
programs/multisig-escrow/src/: lib.rs
programs/payment-escrow/: Cargo.toml
programs/payment-escrow/src/: lib.rs
programs/shielded-pool/: Cargo.toml
programs/shielded-pool/src/: lib.rs  verifying_key.rs
scripts/: create-multi-claims.ts  create-test-claim.ts  deploy-devnet.sh  deploy-production.sh  diagnose-claim.ts  e2e-test-arb.ts  init-config.mjs  update-fees.ts
services/relayer/: package.json
tests/: integration.test.ts
(+354 files in other folders)
