[workspace]
resolver = "2"

members = [
    "programs/*",
]

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

# Pin blake3 to avoid edition2024 requirement on SBF toolchain (rustc 1.84.1)
blake3 = "=1.5.5"

[profile.release]
overflow-checks = true
