[package]
name = "ghost-registry"
version = "0.1.0"
description = "ZKIRA Pay - Stealth Address Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ghost_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["init-if-needed"]
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
