[package]
name = "payment-escrow"
version = "0.1.0"
description = "ZKIRA Pay - Privacy Payment Escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["init-if-needed"]
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
