[package]
name = "shielded-pool"
version = "0.1.0"
description = "Shielded pool for private payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shielded_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
groth16-solana = { workspace = true }
light-poseidon = { workspace = true }
